es,cn: add relnotes, links and tags

--- a/slitaz/index.de.html
+++ b/slitaz/index.de.html
@@ -49,6 +49,7 @@ lesen Sie bitte das deutsche Handbuch. das Teil des
 <!-- Footer. -->
 <div id="footer">
 	<a href="#top">Top of the page</a> - Languages:
+	<a href="index.cn.html">cn</a> |
 	<a href="index.de.html">de</a> |
 	<a href="index.en.html">en</a> |
 	<a href="index.fr.html">fr</a> |
