--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
 	<title>SliTaz - System doc</title>
 	<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1" />
@@ -60,6 +60,7 @@ Support can be found on the SliTaz mailing list or the community
 	<li><a href="relnotes.en.html">Release Notes for 3.0</a> -
 	<a href="relnotes.cn.html">cn</a> |
 	<a href="relnotes.en.html">en</a> |
+	<a href="relnotes.es.html">es</a> |
 	<a href="relnotes.fr.html">fr</a> |
 	<a href="relnotes.pt.html">pt</a></li>
 	<li><a href="http://doc.slitaz.org/en:start">Online Documentation</a></li>
@@ -168,6 +169,7 @@ Handbook: <a href="http://doc.slitaz.org/en:handbook:liveusb">LiveUSB media</a>
 <!-- Footer. -->
 <div id="footer">
 	<a href="#top">Top of the page</a> - Languages:
+	<a href="index.cn.html">cn</a> |
 	<a href="index.de.html">de</a> |
 	<a href="index.en.html">en</a> |
 	<a href="index.fr.html">fr</a> |
