--- a/slitaz/index.fr.html
+++ b/slitaz/index.fr.html
@@ -65,6 +65,7 @@ de discussion ou <a href="http://forum.slitaz.org/">le forum</a>.
 <!-- Footer. -->
 <div id="footer">
 	<a href="#top">Top of the page</a> - Languages:
+	<a href="index.cn.html">cn</a> |
 	<a href="index.de.html">de</a> |
 	<a href="index.en.html">en</a> |
 	<a href="index.fr.html">fr</a> |
