--- a/slitaz/index.hu.html
+++ b/slitaz/index.hu.html
@@ -69,6 +69,7 @@ k&ouml;z&ouml;ss&eacute;gi f&oacute;rumban.
 <!-- Footer. -->
 <div id="footer">
 	<a href="#top">Top of the page</a> - Languages:
+	<a href="index.cn.html">cn</a> |
 	<a href="index.de.html">de</a> |
 	<a href="index.en.html">en</a> |
 	<a href="index.fr.html">fr</a> |
