--- a/slitaz/index.pt.html
+++ b/slitaz/index.pt.html
@@ -182,6 +182,7 @@ comando. Maiores informações podem ser encontradas no Manual do SliTaz:
 <!-- Footer. -->
 <div id="footer">
 	<a href="#top">Topo da Página</a> - Outras Línguas:
+	<a href="index.cn.html">cn</a> |
 	<a href="index.de.html">de</a> |
 	<a href="index.en.html">en</a> |
 	<a href="index.fr.html">fr</a> |
