en,fr: have cooking information

--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -34,7 +34,7 @@
 
 <h2><font color="#DF8F06">Documentation (en)</font></h2>
 
-<!--
+
 <p>
 The Cooking version doesn't provide any Release Notes, major changes are
 announced on the web site and the <a href="http://labs.slitaz.org/">Labs</a>
@@ -42,9 +42,9 @@ provide fresh news about the project's activity. Like the stable version, you
 will find <a href="http://doc.slitaz.org/">documentation</a> on the wiki site
 and support on the community <a href="http://forum.slitaz.org/">forum</a>.
 </p>
--->
 
-<p>
+
+<!--<p>
 SliTaz GNU/Linux stable release is published with the project tools,
 manuals and <a href="relnotes.en.html">Release Notes</a> installed on
 the system. Manuals and this page are accessible through the standard menu.
@@ -53,16 +53,16 @@ general information about SliTaz. To use and configure the system you can
 read the <a href="http://doc.slitaz.org/en:handbook:start">Handbook</a>.
 Support can be found on the SliTaz mailing list or the community 
 <a href="http://forum.slitaz.org/">Forum</a>. 
-</p>
+</p>-->
 
 <ul>
 	<li><a href="#start">Getting started guide</a></li>
-	<li><a href="relnotes.en.html">Release Notes for 3.0</a> -
+	<!--<li><a href="relnotes.en.html">Release Notes for 3.0</a> -
 	<a href="relnotes.cn.html">cn</a> |
 	<a href="relnotes.en.html">en</a> |
 	<a href="relnotes.es.html">es</a> |
 	<a href="relnotes.fr.html">fr</a> |
-	<a href="relnotes.pt.html">pt</a></li>
+	<a href="relnotes.pt.html">pt</a></li>-->
 	<li><a href="http://doc.slitaz.org/en:start">Online Documentation</a></li>
 </ul>
 
