--- a/slitaz/index.fr.html
+++ b/slitaz/index.fr.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1" />
 	<meta name="description" content="slitaz doc system releases notes information cooking" />
 	<meta name="expires" content="never" />
-	<meta name="modified" content="2010-03-25 14:30:00" />
+	<meta name="modified" content="2010-09-03 22:30:00" />
 	<meta name="publisher" content="www.slitaz.org" />
 	<meta name="author" content="Christophe Lincoln"/>
 	<link rel="shortcut icon" href="favicon.ico" />
@@ -33,16 +33,17 @@
 
 <h2><font color="#DF8F06">Documentation (fr)</font></h2>
 
-<!--<p>
+<p>
 La version en cuisson ou <em>Cooking</em> ne fourni pas de notes de
 publication, les chagements sont annonçés sur le site web et 
 <a href="http://labs.slitaz.org/">les laboratoires</a> proposent des
 nouvelles fraîches. Comme pour la version stable, vous pouvez vous 
-référer à la documentation du site et trouverez de l'aide sur 
-<a href="http://forum.slitaz.org/">le forum</a> du projet.
-</p>-->
+référer à <a href="http://doc.slitaz.org/">la documentation</a> et 
+trouverez de l'aide sur <a href="http://forum.slitaz.org/">le forum</a>
+du projet.
+</p>
 
-<p>
+<!--<p>
 La version stable de SliTaz GNU/linux est distribuée avec les manuels 
 des outils de la distribution et <a href="relnotes.fr.html">les Notes de publication</a>.
 Tous les manuels ainsi que cette page sont directement accessibles depuis
@@ -51,11 +52,11 @@ documentation complète via le site communautaire:
 <a href="http://doc.slitaz.org/">doc.slitaz.org</a>.
 Pour de l'aide vous trouverez un support technique gratuit via la liste
 de discussion ou <a href="http://forum.slitaz.org/">le forum</a>.
-</p> 
+</p>-->
 
 <ul>
-	<li><a href="index.en.html/#start">Getting started guide</a> (en)</li>
-	<li><a href="relnotes.fr.html">Notes de publication pour 3.0</a></li>
+	<li><a href="index.en.html#start">Getting started guide</a> (en)</li>
+	<!--<li><a href="relnotes.fr.html">Notes de publication pour 3.0</a></li>-->
 	<li><a href="http://doc.slitaz.org/fr:start">Documentation en ligne</a></li>
 </ul>
 
