--- a/slitaz/index.de.html
+++ b/slitaz/index.de.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1" />
 	<meta name="description" content="slitaz doc system releases notes information cooking" />
 	<meta name="expires" content="never" />
-	<meta name="modified" content="2009-04-16 10:30:00" />
+	<meta name="modified" content="2010-09-03 22:30:00" />
 	<meta name="publisher" content="www.slitaz.org" />
 	<meta name="author" content="Christophe Lincoln"/>
 	<link rel="shortcut icon" href="favicon.ico" />
@@ -40,7 +40,7 @@ erreichbar. Bitte konsultieren Sie ebenfalls die
 <a href="http://www.slitaz.org/de/">Deutsche Projektseite</a> 
 für allgemeine Informationen über SliTaz. Für die Benutzung des Systems
 lesen Sie bitte das deutsche Handbuch. das Teil des 
-<a href="http://doc.slitaz.org/">SliTaz Wiki</a> ist.
+<a href="http://doc.slitaz.org/de:start">SliTaz Wiki</a> ist.
 </p>
 
 <!-- End of content -->
