--- a/slitaz/index.pt.html
+++ b/slitaz/index.pt.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1" />
 	<meta name="description" content="slitaz doc system releases notes information cooking" />
 	<meta name="expires" content="never" />
-	<meta name="modified" content="2009-04-16 10:30:00" />
+	<meta name="modified" content="2010-09-03 22:30:00" />
 	<meta name="publisher" content="www.slitaz.org" />
 	<meta name="author" content="Christophe Lincoln"/>
 	<link rel="shortcut icon" href="favicon.ico" />
@@ -34,7 +34,7 @@
 
 <h2><font color="#DF8F06">Documentação (pt)</font></h2>
 
-<!--
+
 <p>
 A versão de testes (cooking) do SliTaz não fornece notas de lançamento, 
 qualquer mudança para esta versão é anunciada no website e o 
@@ -43,9 +43,9 @@ e atividades do projeto. Assim como na versão estável, você irá obter
 informações sobre a versão de testes no website e suporte no 
 <a href="http://forum.slitaz.org/">fórum</a> do projeto.
 </p>
--->
 
-<p>
+
+<!--<p>
 O SliTaz GNU/Linux versão estável é distribuido com os manuais das 
 ferramentas do projetos e <a href="relnotes.pt.html">Notas de Lançamento</a>
 instalados no sistema. Os manuais e esta página podem ser acessados por
@@ -55,11 +55,11 @@ gerais sobre o SliTaz. Para usar e configurar o sistema você pode ler o
 <a href="http://doc.slitaz.org/pt:handbook:start">Manual</a>. Pode-se
 obter suporte na nossa lista de discussão ou no
 <a href="http://forum.slitaz.org/">Fórum</a>.
-</p>
+</p>-->
 
 <ul>
 	<li><a href="#start">Primeiros Passos</a></li>
-	<li><a href="relnotes.pt.html">Notas de Lançamento para a versão 3.0</a></li>
+	<!--<li><a href="relnotes.pt.html">Notas de Lançamento para a versão 3.0</a></li>-->
 	<li><a href="http://doc.slitaz.org/pt:start">Documentação Online</a></li>
 </ul>
 
