--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -95,7 +95,7 @@ can open a terminal and double press on the tabulation button. And to have
 a list of all installed packages you can launch the package manager user interface
 from the Lxpanel icon or by using the "System Tools" menu entry. To install any new packages
 you must have a network connection, the DVD of packages or an USB storage device 
-with downloaded packages. Naturally any package management
+containing downloaded packages. Naturally any package management
 can also be done from the command line and <code>tazpkg</code>.
 </p>
 
