--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -76,9 +76,10 @@ Click on the "Network Status Monitor" at the bottom right of the screen, then
 "Configure" and the network manager (netbox) will come up. You can then
 go to the "DHCP" tab and click "Start", and Slitaz will send a DHCP request 
 to the local router. You may also setup a static IP, PPPoE, PPP, VPN and 
-more options using their respective tabs. To configure a wireless connection you 
-can use SliTaz wifibox by clicking "Wireless Manager" in the Network Manager 
-or by using the "System Tools" menu entry -> "Wireless networks connections".
+more networking options by using their respective tabs. To configure a wireless 
+connection you can use SliTaz wifibox by clicking "Wireless Manager" in the 
+Network Manager or by using the "System Tools" menu entry -> "Wireless networks 
+connections".
 </p>
 <p>
 More detailed information can be found in the Handbook: 
@@ -122,7 +123,7 @@ mixer and a light audio player to easily listen to any MP3 or OGG files. The Sou
 card is autodetected at boot time and audio support works out-of-the-box
 on many systems. If you manually add a new user and can't listen to audio, please
 check that the user belongs to the <code>audio</code> group. For any other trouble please
-look into the full documentation and/or use the forum.
+check the full documentation and/or use the forum.
 </p>
 <p>
 Videos can be watched by installing one single package or using a dedicated
@@ -135,8 +136,8 @@ available under GNU/Linux: <code>mplayer</code>, <code>xine-ui</code> and <code>
 <p>
 You can get information on your system by clicking on "System information"
 in the System Tools menu, then "Summary". Clicking on the other 
-buttons brings you more information, and using the benchmarks
-gives you an idea on how fast your computer is. To have a list and control
+buttons brings you more information, and using the benchmarks can
+give you an idea on how fast your computer is. To have a list and control
 of all your current processes you can use the "Task Manager".
 </p>
 
