index.en.html: edits/typos

--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -38,7 +38,7 @@
 <p>
 The Cooking version doesn't provide any Release Notes, major changes are
 announced on the web site and the <a href="http://labs.slitaz.org/">Labs</a>
-provide fresh news about the project's activity. Like the stable version, you
+provide fresh news about the project's activity. Like the stable version you
 will find <a href="http://doc.slitaz.org/">documentation</a> on the wiki site
 and support on the community <a href="http://forum.slitaz.org/">forum</a>.
 </p>
@@ -76,7 +76,7 @@ Click on the "Network Status Monitor" at the bottom right of the screen, then
 "Configure" and the network manager (netbox) will come up. You can then
 go to the "DHCP" tab and click "Start", and Slitaz will send a DHCP request 
 to the local router. You may also setup a static IP, PPPoE, PPP, VPN and 
-more networking options by using their respective tabs. To configure a wireless 
+other networking options by using their respective tabs. To configure a wireless 
 connection you can use SliTaz wifibox by clicking "Wireless Manager" in the 
 Network Manager or by using the "System Tools" menu entry -> "Wireless networks 
 connections".
@@ -91,12 +91,12 @@ More detailed information can be found in the Handbook:
 <h3>Applications</h3>
 <p>
 To have a list of all graphical applications you can use the SliTaz menu button 
-at the bottom left of the screen. To have a list of command line tools, you
+at the bottom left of the screen. To have a list of command line tools you
 can open a terminal and double press on the tabulation button. And to have
 a list of all installed packages you can launch the package manager user interface
 from the Lxpanel icon or by using the "System Tools" menu entry. To install any new packages
 you must have a network connection, the DVD of packages or an USB storage device 
-containing downloaded packages. Naturally any package management
+containing any downloaded packages. Naturally any package management
 can also be done from the command line and <code>tazpkg</code>.
 </p>
 
@@ -111,7 +111,7 @@ on "get-OpenOffice3" and install the script with the <code>Auto exec</code> opti
 enabled. 
 </p>
 <p>
-To have a lightweight office suite; use: Abiword as Word processor, Gnumeric as 
+To have a lightweight office suite: just use Abiword for the Word processor, Gnumeric as a
 Spreadsheet and Homebank for Bank Accounting.
 </p>
 
@@ -122,13 +122,13 @@ Most SliTaz flavors include a wide range of sound card drivers, a volume
 mixer and a light audio player to easily listen to any MP3 or OGG files. The Sound
 card is autodetected at boot time and audio support works out-of-the-box
 on many systems. If you manually add a new user and can't listen to audio, please
-check that the user belongs to the <code>audio</code> group. For any other trouble please
+check that the user belongs to the <code>audio</code> group. For any other trouble, please
 check the full documentation and/or use the forum.
 </p>
 <p>
 Videos can be watched by installing one single package or using a dedicated
 LiveCD or LiveUSB system. The SliTaz team have packaged some of the best video players 
-available under GNU/Linux: <code>mplayer</code>, <code>xine-ui</code> and <code>vlc</code>
+available under GNU/Linux: <code>mplayer</code>, <code>xine-ui</code> and <code>vlc</code>.
 </p>
 
 <a name="info"></a>
@@ -136,7 +136,7 @@ available under GNU/Linux: <code>mplayer</code>, <code>xine-ui</code> and <code>
 <p>
 You can get information on your system by clicking on "System information"
 in the System Tools menu, then "Summary". Clicking on the other 
-buttons brings you more information, and using the benchmarks can
+buttons offers you more information, and using the benchmarks can
 give you an idea on how fast your computer is. To have a list and control
 of all your current processes you can use the "Task Manager".
 </p>
@@ -147,7 +147,7 @@ of all your current processes you can use the "Task Manager".
 By default, Slitaz doesn't have its desktop running as root administrator:
 it asks for a root password (default <code>root</code>) for any superuser work.
 Therefore, it is safer and more secure. To become root in an xterm, simply 
-type <code>su</code>, and enter the root password.
+type <code>su</code> and enter the root password.
 </p>
 
 <a name="install"></a>
@@ -155,7 +155,7 @@ type <code>su</code>, and enter the root password.
 <p>
 SliTaz can be installed to a hard disk or on an USB mass storage device using the
 "SliTaz Installer" from the "System Tools" menu. The installer makes a full HD install.
-SliTaz won't work in memory (RAM) anymore like in Live or Frugal mode and 
+SliTaz won't function in memory (RAM) anymore like in Live or Frugal mode and 
 everything is persistent.
 </p>
 <p>
