--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -38,7 +38,7 @@
 <p>
 The Cooking version doesn't provide any Release Notes, major changes are
 announced on the web site and the <a href="http://labs.slitaz.org/">Labs</a>
-provide fresh news about the project's activity. Like the stable version you
+provide fresh news about the project's activity. Like the stable version, you
 will find <a href="http://doc.slitaz.org/">documentation</a> on the wiki site
 and support on the community <a href="http://forum.slitaz.org/">forum</a>.
 </p>
@@ -49,7 +49,7 @@ The SliTaz GNU/Linux stable release is published with the project tools,
 manuals and <a href="relnotes.en.html">Release Notes</a> installed on
 the system. Manuals and this page are accessible through the standard menu.
 Please check the <a href="http://www.slitaz.org/en/">project page</a> for
-general information about SliTaz. To start to use and configure the system 
+general information about SliTaz. To start to use and configure the system, 
 you can read the <a href="http://doc.slitaz.org/en:handbook:start">Handbook</a>.
 Support can be found on the SliTaz mailing list or the community 
 <a href="http://forum.slitaz.org/">Forum</a>. 
@@ -77,7 +77,7 @@ Click on the "Network Status Monitor" at the bottom right of the screen, then
 go to the "DHCP" tab and click "Start", and Slitaz will send a DHCP request 
 to the local router. You may also setup a static IP, PPPoE, PPP, VPN and 
 other networking options by using their respective tabs. To configure a wireless 
-connection you can use SliTaz wifibox by clicking "Wireless Manager" in the 
+connection, you can use SliTaz wifibox by clicking "Wireless Manager" in the 
 Network Manager or by using the "System Tools" menu entry -> "Wireless networks 
 connections".
 </p>
@@ -90,11 +90,11 @@ More detailed information can be found in the Handbook:
 <a name="apps"></a>
 <h3>Applications</h3>
 <p>
-To have a list of all graphical applications you can use the SliTaz menu button 
-at the bottom left of the screen. To have a list of command line tools you
+To have a list of all graphical applications, you can use the SliTaz menu button 
+at the bottom left of the screen. To have a list of command line tools, you
 can open a terminal and double press on the tabulation button. And to have
-a list of all installed packages you can launch the package manager user interface
-from the Lxpanel icon or by using the "System Tools" menu entry. To install any new packages
+a list of all installed packages, you can launch the package manager user interface
+from the Lxpanel icon or by using the "System Tools" menu entry. To install any new packages,
 you must have a network connection, the DVD of packages or an USB storage device 
 containing any downloaded packages. Naturally any package management
 can also be done from the command line and <code>tazpkg</code>.
@@ -138,7 +138,7 @@ You can get information on your system by clicking on "System information"
 in the System Tools menu, then "Summary". Clicking on the other 
 buttons offers you more information, and using the benchmarks can
 give you an idea on how fast your computer is. To have a list and control
-of all your current processes you can use the "Task Manager".
+of all your current processes, you can use the "Task Manager".
 </p>
 
 <a name="root"></a>
@@ -159,7 +159,7 @@ SliTaz won't function in memory (RAM) anymore like in Live or Frugal mode and
 everything is persistent.
 </p>
 <p>
-To generate a LiveUSB system you can use the "Tazusb LiveUSB Tool" from the "System Tools"
+To generate a LiveUSB system, you can use the "Tazusb LiveUSB Tool" from the "System Tools"
 menu or <code>tazusb</code> from the command line. More information can be found in the SliTaz
 Handbook: <a href="http://doc.slitaz.org/en:handbook:liveusb">LiveUSB media</a>
 </p>
