Start migration to new style and fix labs link

--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -1,48 +1,42 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title>SliTaz - System doc</title>
-	<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1" />
-	<meta name="description" content="slitaz doc system releases notes information cooking" />
-	<meta name="expires" content="never" />
-	<meta name="modified" content="2010-09-03 22:30:00" />
-	<meta name="publisher" content="www.slitaz.org" />
-	<meta name="author" content="Christophe Lincoln"/>
+	<title>SliTaz - System doc (en)</title>
+	<meta charset="utf-8" />
 	<link rel="shortcut icon" href="favicon.ico" />
-	<link rel="stylesheet" type="text/css" href="book.css" />
+	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
-<body bgcolor="#ffffff">
+<body>
 
-<!-- Header and quick navigation -->
+<!-- Header -->
 <div id="header">
-	<a name="top"></a>
-	<h1><font color="#3E1220">SliTaz - System doc</font></h1>
+	<h1>SliTaz - System doc</h1>
 </div>
 
-<div id="quicknav">
-	SliTaz:
-	<a href="http://www.slitaz.org/">Website</a>
-	<a href="http://forum.slitaz.org/">Forum</a>
-	<a href="http://doc.slitaz.org/">Documentation</a>
-	<a href="http://pkgs.slitaz.org/">Packages</a>
-	<a href="http://labs.slitaz.org/">Labs</a>
+<!-- Languages -->
+<div id="lang">
+	<a href="http://www.slitaz.org/i18n.php">
+		<img src="images/locale.png" alt="locale.png" /></a>
+	<a href="index.cn.html">cn</a>
+	<a href="index.de.html">de</a>
+	<a href="index.en.html">en</a>
+	<a href="index.fr.html">fr</a>
+	<a href="index.hu.html">hu</a>
+	<a href="index.pt.html">pt</a>
 </div>
 
 <!-- Content. -->
 <div id="content">
 
-<h2><font color="#DF8F06">Documentation (en)</font></h2>
-
+<h2>Documentation (en)</h2>
 
 <p>
 The Cooking version doesn't provide any Release Notes, major changes are
-announced on the web site and the <a href="http://labs.slitaz.org/">Labs</a>
+announced on the web site and the <a href="http://scn.slitaz.org/">Blog</a>
 provide fresh news about the project's activity. Like the stable version, you
 will find <a href="http://doc.slitaz.org/">documentation</a> on the wiki site
 and support on the community <a href="http://forum.slitaz.org/">forum</a>.
 </p>
-
 
 <!--<p>
 The SliTaz GNU/Linux stable release is published with the project tools,
@@ -67,7 +61,7 @@ Support can be found on the SliTaz mailing list or the community
 </ul>
 
 <a name="start"></a>
-<h2><font color="#DF8F06">Getting started</font></h2>
+<h2>Getting started</h2>
 
 <a name="network"></a>
 <h3>Network connections</h3>
@@ -167,23 +161,8 @@ Handbook: <a href="http://doc.slitaz.org/en:handbook:liveusb">LiveUSB media</a>
 <!-- End of content -->
 </div>
 
-<!-- Footer. -->
 <div id="footer">
-	<a href="#top">Top of the page</a> - Languages:
-	<a href="index.cn.html">cn</a> |
-	<a href="index.de.html">de</a> |
-	<a href="index.en.html">en</a> |
-	<a href="index.fr.html">fr</a> |
-	<a href="index.hu.html">hu</a> |
-	<a href="index.pt.html">pt</a>
-</div>
-
-<div id="copy">
-	Copyright &copy; 2010 <a href="http://www.slitaz.org/">SliTaz</a> -
-	<a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License</a>;<br />
-	Documentation under
-	<a href="http://www.gnu.org/copyleft/fdl.html">GNU Free Documentation License</a>
-	and valid <a href="http://validator.w3.org/">xHTML 1.0</a>.
+	Copyright &copy; 2011 <a href="http://www.slitaz.org/">SliTaz GNU/Linux</a>
 </div>
 
 </body>
