Fix and update all doc

--- a/slitaz/index.fr.html
+++ b/slitaz/index.fr.html
@@ -1,54 +1,51 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title>SliTaz - System doc (fr)</title>
-	<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1" />
-	<meta name="description" content="slitaz doc system releases notes information cooking" />
-	<meta name="expires" content="never" />
-	<meta name="modified" content="2010-09-03 22:30:00" />
-	<meta name="publisher" content="www.slitaz.org" />
-	<meta name="author" content="Christophe Lincoln"/>
+	<meta charset="utf-8" />
 	<link rel="shortcut icon" href="favicon.ico" />
-	<link rel="stylesheet" type="text/css" href="book.css" />
+	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
-<body bgcolor="#ffffff">
+<body>
 
-<!-- Header and quick navigation -->
+<!-- Header -->
 <div id="header">
-<h1><font color="#3E1220">SliTaz - Doc du système</font></h1>
+	<h1>SliTaz - System doc</h1>
 </div>
 
-<div id="quicknav">
-	SliTaz:
-	<a href="http://www.slitaz.org/">Website</a>
-	<a href="http://forum.slitaz.org/">Forum</a>
-	<a href="http://doc.slitaz.org/">Documentation</a>
-	<a href="http://pkgs.slitaz.org/">Packages</a>
-	<a href="http://labs.slitaz.org/">Labs</a>
+<!-- Languages -->
+<div id="lang">
+	<a href="http://www.slitaz.org/i18n.php">
+		<img src="images/locale.png" alt="locale.png" /></a>
+	<a href="index.cn.html">cn</a>
+	<a href="index.de.html">de</a>
+	<a href="index.en.html">en</a>
+	<a href="index.fr.html">fr</a>
+	<a href="index.hu.html">hu</a>
+	<a href="index.pt.html">pt</a>
 </div>
 
 <!-- Content. -->
 <div id="content">
 
-<h2><font color="#DF8F06">Documentation (fr)</font></h2>
+<h2>Documentation (fr)</h2>
 
 <p>
-La version en cuisson ou <em>Cooking</em> ne fourni pas de notes de
-publication, les chagements sont annonçés sur le site web et 
-<a href="http://labs.slitaz.org/">les laboratoires</a> proposent des
-nouvelles fraîches. Comme pour la version stable, vous pouvez vous 
-référer à <a href="http://doc.slitaz.org/">la documentation</a> et 
-trouverez de l'aide sur <a href="http://forum.slitaz.org/">le forum</a>
-du projet.
+	La version en cuisson ou <em>Cooking</em> ne fourni pas de notes de
+	publication, les chagements sont annonÃ§Ã©s sur le site web et 
+	<a href="http://scn.slitaz.org/">le blog officiel</a> proposent des
+	nouvelles fraÃ®ches. Comme pour la version stable, vous pouvez vous 
+	rÃ©fÃ©rer Ã  <a href="http://doc.slitaz.org/">la documentation</a> et 
+	trouverez de l'aide sur <a href="http://forum.slitaz.org/">le forum</a>
+	du projet.
 </p>
 
 <!--<p>
-La version stable de SliTaz GNU/linux est distribuée avec les manuels 
+La version stable de SliTaz GNU/linux est distribuÃ©e avec les manuels 
 des outils de la distribution et <a href="relnotes.fr.html">les Notes de publication</a>.
 Tous les manuels ainsi que cette page sont directement accessibles depuis
-le menu documention de la barre des tâches. Sur le Web, vous trouverez une
-documentation complète via le site communautaire: 
+le menu documention de la barre des tÃ¢ches. Sur le Web, vous trouverez une
+documentation complÃ¨te via le site communautaire: 
 <a href="http://doc.slitaz.org/">doc.slitaz.org</a>.
 Pour de l'aide vous trouverez un support technique gratuit via la liste
 de discussion ou <a href="http://forum.slitaz.org/">le forum</a>.
@@ -63,23 +60,8 @@ de discussion ou <a href="http://forum.slitaz.org/">le forum</a>.
 <!-- End of content -->
 </div>
 
-<!-- Footer. -->
 <div id="footer">
-	<a href="#top">Top of the page</a> - Languages:
-	<a href="index.cn.html">cn</a> |
-	<a href="index.de.html">de</a> |
-	<a href="index.en.html">en</a> |
-	<a href="index.fr.html">fr</a> |
-	<a href="index.hu.html">hu</a> |
-	<a href="index.pt.html">pt</a>
-</div>
-
-<div id="copy">
-	Copyright &copy; 2010 <a href="http://www.slitaz.org/">SliTaz</a> -
-	<a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License</a>;<br />
-	Documentation under
-	<a href="http://www.gnu.org/copyleft/fdl.html">GNU Free Documentation License</a>
-	and valid <a href="http://validator.w3.org/">xHTML 1.0</a>.
+	Copyright &copy; 2011 <a href="http://www.slitaz.org/">SliTaz GNU/Linux</a>
 </div>
 
 </body>
