--- a/slitaz/index.de.html
+++ b/slitaz/index.de.html
@@ -1,68 +1,50 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="de" lang="de">
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title>SliTaz - System doc (de)</title>
-	<meta http-equiv="content-type" content="text/html; charset=ISO-8859-1" />
-	<meta name="description" content="slitaz doc system releases notes information cooking" />
-	<meta name="expires" content="never" />
-	<meta name="modified" content="2010-09-03 22:30:00" />
-	<meta name="publisher" content="www.slitaz.org" />
-	<meta name="author" content="Christophe Lincoln"/>
+	<meta charset="utf-8" />
 	<link rel="shortcut icon" href="favicon.ico" />
-	<link rel="stylesheet" type="text/css" href="book.css" />
+	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
-<body bgcolor="#ffffff">
+<body>
 
-<!-- Header and quick navigation -->
+<!-- Header -->
 <div id="header">
-<h1><font color="#3E1220">SliTaz - System doc</font></h1>
+	<h1>SliTaz - System doc</h1>
 </div>
 
-<div id="quicknav">
-	SliTaz:
-	<a href="http://www.slitaz.org/">Website</a>
-	<a href="http://forum.slitaz.org/">Forum</a>
-	<a href="http://doc.slitaz.org/">Documentation</a>
-	<a href="http://pkgs.slitaz.org/">Packages</a>
-	<a href="http://labs.slitaz.org/">Labs</a>
+<!-- Languages -->
+<div id="lang">
+	<a href="http://www.slitaz.org/i18n.php">
+		<img src="images/locale.png" alt="locale.png" /></a>
+	<a href="index.cn.html">cn</a>
+	<a href="index.de.html">de</a>
+	<a href="index.en.html">en</a>
+	<a href="index.fr.html">fr</a>
+	<a href="index.hu.html">hu</a>
+	<a href="index.pt.html">pt</a>
 </div>
 
 <!-- Content. -->
 <div id="content">
 
-<h2><font color="#DF8F06">Documentation (de)</font></h2>
+<h2>Dokumentation (de)</h2>
 
 <p>
-SliTaz GNU/Linux stable Release wird mit den Dokumentationen für die 
-SliTaz-Werkzeuge. Dokumentation und diese Seite sind über das Openboxenü 
-erreichbar. Bitte konsultieren Sie ebenfalls die 
-<a href="http://www.slitaz.org/de/">Deutsche Projektseite</a> 
-für allgemeine Informationen über SliTaz. Für die Benutzung des Systems
-lesen Sie bitte das deutsche Handbuch. das Teil des 
-<a href="http://doc.slitaz.org/de:start">SliTaz Wiki</a> ist.
+	SliTaz GNU/Linux stable Release wird mit den Dokumentationen fÃ¼r die 
+	SliTaz-Werkzeuge. Dokumentation und diese Seite sind Ã¼ber das OpenboxenÃ¼ 
+	erreichbar. Bitte konsultieren Sie ebenfalls die 
+	<a href="http://www.slitaz.org/de/">Deutsche Projektseite</a> 
+	fÃ¼r allgemeine Informationen Ã¼ber SliTaz. FÃ¼r die Benutzung des Systems
+	lesen Sie bitte das deutsche Handbuch. das Teil des 
+	<a href="http://doc.slitaz.org/de:start">SliTaz Wiki</a> ist.
 </p>
 
 <!-- End of content -->
 </div>
 
-<!-- Footer. -->
 <div id="footer">
-	<a href="#top">Top of the page</a> - Languages:
-	<a href="index.cn.html">cn</a> |
-	<a href="index.de.html">de</a> |
-	<a href="index.en.html">en</a> |
-	<a href="index.fr.html">fr</a> |
-	<a href="index.hu.html">hu</a> |
-	<a href="index.pt.html">pt</a>
-</div>
-
-<div id="copy">
-	Copyright &copy; 2010 <a href="http://www.slitaz.org/">SliTaz</a> -
-	<a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License</a>;<br />
-	Documentation under
-	<a href="http://www.gnu.org/copyleft/fdl.html">GNU Free Documentation License</a>
-	and valid <a href="http://validator.w3.org/">xHTML 1.0</a>.
+	Copyright &copy; 2011 <a href="http://www.slitaz.org/">SliTaz GNU/Linux</a>
 </div>
 
 </body>
