--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -31,11 +31,12 @@
 <h2>Documentation (en)</h2>
 
 <p>
-The Cooking version doesn't provide any Release Notes, major changes are
-announced on the web site and the <a href="http://scn.slitaz.org/">Blog</a>
-provide fresh news about the project's activity. Like the stable version, you
-will find <a href="http://doc.slitaz.org/">documentation</a> on the wiki site
-and support on the community <a href="http://forum.slitaz.org/">forum</a>.
+	The Cooking version doesn't provide any Release Notes, major changes are
+	announced on the web site and the <a href="http://scn.slitaz.org/">Blog</a>
+	provide fresh news about the project's activity. Like the stable version,
+	you will find <a href="http://doc.slitaz.org/">documentation</a> on the
+	wiki site and support on the community
+	<a href="http://forum.slitaz.org/">forum</a>.
 </p>
 
 <!--<p>
