--- a/slitaz/index.hu.html
+++ b/slitaz/index.hu.html
@@ -1,88 +1,59 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-	"http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <title>SliTaz - System doc (hu)</title>
-  <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
-  <meta name="description" content="slitaz doc system releases notes information cooking">
-  <meta name="expires" content="never">
-  <meta name="modified" content="2009-04-16 10:30:00">
-  <meta name="publisher" content="www.slitaz.org">
-  <meta name="author" content="Christophe Lincoln">
-  <link rel="shortcut icon" href="favicon.ico">
-  <link rel="stylesheet" type="text/css" href="book.css">
+	<title>SliTaz - System doc (fr)</title>
+	<meta charset="utf-8" />
+	<link rel="shortcut icon" href="favicon.ico" />
+	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
-<body bgcolor="#ffffff">
-<!-- Header and quick navigation -->
+<body>
+
+<!-- Header -->
 <div id="header">
-	<h1><font color="#3e1220">SliTaz - System doc</font></h1>
+	<h1>SliTaz - System doc</h1>
 </div>
 
-<div id="quicknav">
-	SliTaz:
-	<a href="http://www.slitaz.org/">Website</a>
-	<a href="http://forum.slitaz.org/">Forum</a>
-	<a href="http://doc.slitaz.org/">Documentation</a>
-	<a href="http://pkgs.slitaz.org/">Packages</a>
-	<a href="http://labs.slitaz.org/">Labs</a>
+<!-- Languages -->
+<div id="lang">
+	<a href="http://www.slitaz.org/i18n.php">
+		<img src="images/locale.png" alt="locale.png" /></a>
+	<a href="index.cn.html">cn</a>
+	<a href="index.de.html">de</a>
+	<a href="index.en.html">en</a>
+	<a href="index.fr.html">fr</a>
+	<a href="index.hu.html">hu</a>
+	<a href="index.pt.html">pt</a>
 </div>
 
 <!-- Content. -->
 <div id="content">
 
-<h2><font color="#df8f06">Documentation (hu)</font></h2>
+<h2>Documentation (fr)</h2>
 
-<h3><font color="#6c0023">Megjegyz&eacute;s a kiad&aacute;shoz</font></h3>
 <p>
-A SliTaz GNU/Linux stabil kiad&aacute;sa a rendszerre
-telep&iacute;tett projekt-eszk&ouml;z&ouml;kkel,
-le&iacute;r&aacute;sokkal &eacute;s Kiad&aacute;si
-t&aacute;j&eacute;koztat&oacute;val jelent meg. A
-le&iacute;r&aacute;sok &eacute;s ez az oldal az Openbox men&uuml;n
-kereszt&uuml;l &eacute;rhet&#337;k el. A Slitazzal kapcsolatos
-&aacute;ltal&aacute;nos inform&aacute;ci&oacute;k&eacute;rt
-k&eacute;rj&uuml;k l&aacute;togassa meg a <a
- href="http://www.slitaz.org/">projekt oldalt</a> . A rendszer
-be&aacute;ll&iacute;t&aacute;s&aacute;hoz &eacute;s
-haszn&aacute;lat&aacute;hoz olvassa el a&nbsp; <a
- href="http://doc.slitaz.org/en:handbook:start">K&eacute;zik&ouml;nyvet</a>.
-A k&ouml;z&ouml;ss&eacute;gr&#337;l a
-<a href="http://doc.slitaz.org/">SliTaz Doc</a>&nbsp; oldalon
-tal&aacute;l dokomentumokat. T&aacute;mogat&aacute;st a Slitaz
-k&ouml;z&ouml;ss&eacute;gi <a href="http://forum.slitaz.org/">F&oacute;rumon</a>
-kereszt&uuml;l kaphat.
+	A SliTaz GNU/Linux stabil kiadása a rendszerre telepített projekt-eszközökkel,
+	leírásokkal és Kiadási tájékoztatóval jelent meg. A leírások és ez az oldal
+	az Openbox menün keresztül érhetők el. A Slitazzal kapcsolatos általános
+	információkért kérjük látogassa meg a
+	<a href="http://www.slitaz.org/">projekt oldalt</a> . A rendszer beállításához
+	és használatához olvassa el a
+	<a href="http://doc.slitaz.org/en:handbook:start">Kézikönyvet</a>. A
+	közösségről a <a href="http://doc.slitaz.org/">SliTaz Doc</a> oldalon talál
+	dokomentumokat. Támogatást a Slitaz közösségi
+	<a href="http://forum.slitaz.org/">Fórumon</a> keresztül kaphat.
 </p>
 <p>
-A Cooking verzi&oacute;hoz nincs t&aacute;j&eacute;koztat&oacute;, a
-v&aacute;ltoztat&aacute;sokat k&ouml;zz&eacute;tessz&uuml;k a honlapon,
-&eacute;s a <a href="http://labs.slitaz.org/">Labs</a>
-szolg&aacute;ltat &uacute;j inform&aacute;ci&oacute;kat a projektbeli
-tev&eacute;kenys&eacute;gekr&#337;l. Csak&uacute;gy, mint a stabil
-verzi&oacute;hoz, ehhez is tal&aacute;lhat&oacute;
-dokument&aacute;ci&oacute; &eacute;s t&aacute;mogat&aacute;s a
-k&ouml;z&ouml;ss&eacute;gi f&oacute;rumban.
+	A Cooking verzióhoz nincs tájékoztató, a változtatásokat közzétesszük a
+	honlapon, és a <a href="http://bugs.slitaz.org/">Bugs</a> szolgáltat új
+	információkat a projektbeli tevékenységekről. Csakúgy, mint a stabil
+	verzióhoz, ehhez is található dokumentáció és támogatás a közösségi fórumban.
 </p>
 
 <!-- End of content -->
 </div>
 
-<!-- Footer. -->
 <div id="footer">
-	<a href="#top">Top of the page</a> - Languages:
-	<a href="index.cn.html">cn</a> |
-	<a href="index.de.html">de</a> |
-	<a href="index.en.html">en</a> |
-	<a href="index.fr.html">fr</a> |
-	<a href="index.hu.html">hu</a> |
-	<a href="index.pt.html">pt</a>
-</div>
-
-<div id="copy">
-	Copyright &copy; 2010 <a href="http://www.slitaz.org/">SliTaz</a> -
-	<a href="http://www.gnu.org/licenses/gpl.html">GNU General Public License</a>;<br />
-	Documentation under
-	<a href="http://www.gnu.org/copyleft/fdl.html">GNU Free Documentation License</a>
-	and valid <a href="http://validator.w3.org/">xHTML 1.0</a>.
+	Copyright &copy; 2011 <a href="http://www.slitaz.org/">SliTaz GNU/Linux</a>
 </div>
 
 </body>
