en: add small info and link to tazpanel

--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -64,6 +64,20 @@ Support can be found on the SliTaz mailing list or the community
 <a name="start"></a>
 <h2>Getting started</h2>
 
+<a name="tazpanel"></a>
+<h3>SliTaz Panel</h3>
+<p>
+	From spring 2011 the new way and tool to configure the système is TazPanel.
+	It is a CGI/web interface with a themable user interface from where you
+	can control your entire system such as package management, adding or
+	removing users, creating Live systems and much more. Each page provide
+	small descriptions to help you manage your SliTaz system, to access the
+	panel you can use the menu entry in "System Tools" or this url:
+</p>
+<p>
+	<a href="http://tazpanel:82">http://tazpanel:82</a>
+</p>
+
 <a name="network"></a>
 <h3>Network connections</h3>
 <p>
