--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -67,11 +67,11 @@ Support can be found on the SliTaz mailing list or the community
 <a name="tazpanel"></a>
 <h3>SliTaz Panel</h3>
 <p>
-	From spring 2011 the new way and tool to configure the système is TazPanel.
+	From spring 2011 the new way (and tool) to configure the system is TazPanel.
 	It is a CGI/web interface with a themable user interface from where you
 	can control your entire system such as package management, adding or
-	removing users, creating Live systems and much more. Each page provide
-	small descriptions to help you manage your SliTaz system, to access the
+	removing users, creating Live systems and much more. Each page provides
+	a small description to help you manage your SliTaz system. To access the
 	panel you can use the menu entry in "System Tools" or this url:
 </p>
 <p>
