en.html: tiny edits

--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -69,7 +69,7 @@ Support can be found on the SliTaz mailing list or the community
 <p>
 	From spring 2011 the new way (and tool) to configure the system is TazPanel.
 	It is a CGI/web interface with a themable user interface from where you
-	can control your entire system such as package management, adding or
+	can control your entire system, this includes package management, adding or
 	removing users, creating Live systems and much more. Each page provides
 	a small description to help you manage your SliTaz system. To access the
 	panel you can use the menu entry in "System Tools" or this url:
@@ -120,7 +120,7 @@ on "get-OpenOffice3" and install the script with the <code>Auto exec</code> opti
 enabled. 
 </p>
 <p>
-To have a lightweight office suite: just use Abiword for the Word processor, Gnumeric as a
+To have a lightweight office suite: just use Abiword as the Word processor, Gnumeric as a
 Spreadsheet and Homebank for Bank Accounting.
 </p>
 
