--- a/slitaz/index.en.html
+++ b/slitaz/index.en.html
@@ -22,7 +22,7 @@
 	<a href="index.en.html">en</a>
 	<a href="index.fr.html">fr</a>
 	<a href="index.hu.html">hu</a>
-	<a href="index.pt.html">pt</a>
+	<a href="index.pt_BR.html">pt</a>
 </div>
 
 <!-- Content. -->
