--- a/slitaz/index.pt_BR.html
+++ b/slitaz/index.pt_BR.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-	<title>SliTaz - System doc (fr)</title>
+	<title>SliTaz - System doc (pt)</title>
 	<meta charset="utf-8" />
 	<link rel="shortcut icon" href="favicon.ico" />
 	<link rel="stylesheet" type="text/css" href="style.css" />
@@ -22,7 +22,7 @@
 	<a href="index.en.html">en</a>
 	<a href="index.fr.html">fr</a>
 	<a href="index.hu.html">hu</a>
-	<a href="index.pt.html">pt</a>
+	<a href="index.pt_BR.html">pt</a>
 </div>
 
 <!-- Content. -->
