--- a/slitaz/index.cn.html
+++ b/slitaz/index.cn.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="cn">
 <head>
-	<title>SliTaz - System doc (cn)</title>
 	<meta charset="utf-8" />
+	<title>SliTaz - System doc (cn)</title>
 	<link rel="shortcut icon" href="favicon.ico" />
 	<link rel="stylesheet" type="text/css" href="style.css" />
 </head>
@@ -23,6 +23,7 @@
 	<a href="index.fr.html">fr</a>
 	<a href="index.hu.html">hu</a>
 	<a href="index.pt_BR.html">pt</a>
+	<a href="index.ru.html">ru</a>
 </div>
 
 <!-- content. -->
